BP-1502: fix word wrap for options course

--- a/app/blocks/n-course/l-course/b-information-board/b-information-board.scss
+++ b/app/blocks/n-course/l-course/b-information-board/b-information-board.scss
@@ -37,6 +37,8 @@
     width: 205px;
     padding-right: 15px;
 
+    word-wrap: break-word;
+
     font-weight: 600;
 }
 
